objects/Search_Merge_Duplicate_PA_Contact_Pair__c.object
<CustomObject>
    <label>Search/Merge Duplicate PA Contact Pair</label>
    <nameField>
        <displayFormat>SearchMerge-{0}</displayFormat>
        <label>Search/Merge Duplicate PA Contact Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search/Merge Duplicate PA Contact Pairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>if ( Households_Different__c ,
&apos;The Contacts are not in the same household.  Click the Merge button in the upper right to Merge both the households and the contacts.&apos;,
&apos;The Contacts are part of the same household.  Click the Merge button in the upper right to Merge the contacts.&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_to_Keep__c</fullName>
        <label>Contact to Keep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search/Merge Duplicate PA Contact Pairs</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_PA_Contact_Pairs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_to_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact to Merge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search/Merge Duplicate PA Contact Pairs (Contact to Merge)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_PA_Contact_Pairs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Households_Different__c</fullName>
        <formula>if (Isblank( Household_of_Contact_to_Keep__c ) || Isblank(  Household_of_Contact_to_Merge__c ), false,
if (Household_of_Contact_to_Keep__c = Household_of_Contact_to_Merge__c , false, true)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Households Different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_from_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start from Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Search/Merge Duplicate PA Contact Pairs</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_PA_Contact_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_of_Contact_to_Keep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household of Contact to Keep</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search/Merge Duplicate PA Contact Pairs</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_PA_Contact_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_of_Contact_to_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household of Contact to Merge</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search/Merge Duplicate PA Contact Pairs (Household of Contact to Merge)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_PA_Contact_Pairs1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>